th: try to fix compile

--- a/app/javascript/skins/vanilla/mastodon-system/common.scss
+++ b/app/javascript/skins/vanilla/mastodon-system/common.scss
@@ -1,4 +1,4 @@
-@import 'styles/mastodon';
+@import 'styles/application';
 @media (prefers-color-scheme: light) {
   @import 'styles/mastodon-light';
 }
