--- a/app/javascript/flavours/glitch/styles/admin.scss
+++ b/app/javascript/flavours/glitch/styles/admin.scss
@@ -10,6 +10,17 @@ $content-width: 840px;
   width: 100%;
   min-height: 100vh;
 
+
+  a {
+    color: $highlight-text-color;
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+    }
+  }
+
   .sidebar-wrapper {
     min-height: 100vh;
     overflow: hidden;
