th: flavors: glitch: show emojified display name in quotes

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -77,6 +77,10 @@
     }
   }
 
+  .status__quote {
+    padding-bottom: 0.5em;
+  }
+
   .status__quote,
   .status__content__text,
   .e-content {
@@ -122,6 +126,11 @@
 
     em, i {
       font-style: italic;
+    }
+
+    i[role=img] {
+      font-style: normal;
+      padding-right: 0.25em;
     }
 
     sub {
