--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -696,6 +696,7 @@
 }
 
 a.status__display-name,
+.quote-indicator__display-name,
 .reply-indicator__display-name,
 .detailed-status__display-name,
 .account__display-name {
